[metadata]
name = balderhub-ant
description = balderhub-ant: BalderHub project for testing ANT/ANT+ protocol
author = Max Stahlschmidt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/projects/ant
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-ant/
    Tracker=https://github.com/balder-dev/balderhub-ant/issues

[options]
packages =
    balderhub.ant
    balderhub.ant.contrib
    balderhub.ant.contrib.battery
    balderhub.ant.contrib.battery.setup_features
    balderhub.ant.contrib.heart
    balderhub.ant.contrib.heart.setup_features
    balderhub.ant.lib
    balderhub.ant.lib.scenario_features
    balderhub.ant.lib.setup_features
    balderhub.ant.lib.utils
    balderhub.ant.lib.utils.extended_meta
    balderhub.ant.lib.utils.pages
    balderhub.ant.lib.utils.pages.common
    balderhub.ant.lib.utils.pages.hrm
    balderhub.ant.scenarios
    balderhub.ant.scenarios.hrm

install_requires =
    baldertest>=0.2.0
    balderhub-battery
    balderhub-heart
    openant==1.3.4
    typing_extensions>=4.0.0
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
